@@ -1,3 +1,8 @@
+2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* help/C/gnobots2.xml: Update the version since it is still
+	accurate.
+
 2004-02-23  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* help/it/.cvsignore: Making it correct.
